--- a/RocketGame/Packages/manifest.json
+++ b/RocketGame/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.cinemachine": "2.7.4",
     "com.unity.collab-proxy": "1.5.7",
+    "com.unity.connect.share": "4.2.2",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.9",
     "com.unity.ide.vscode": "1.2.3",
@@ -13,6 +14,7 @@
     "com.unity.timeline": "1.5.5",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.6.1",
+    "com.unity.xr.legacyinputhelpers": "2.1.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
